yukon/html/monitor/table_style.css
table {
  border-collapse: collapse;
  width: 100%;
  table-layout: auto;
}

caption {
  font-weight: bold;
  font-size: 24px;
  text-align: left;
  color: #333;
  margin-bottom: 16px;
}

thead {
  background-color: #333;
  color: white;
  font-size: 0.875rem;
  text-transform: uppercase;
  letter-spacing: 2%;
}

.cell-highlight {
  background-color: gold;
  font-weight: bold;
}

tbody th {
  background-color: #36c;
  color: #fff;
  text-align: left;
}

tbody tr:nth-child(odd) {
  background-color: #fff;
}

tbody tr:nth-child(even) {
  background-color: #eee;
}

th,
td {
  border: 1px solid black;
  padding: 8px;
  word-wrap: break-word;
}

th button {
  margin-left: 0.5em;
}

td input {
  width: 100%;
  height: 100%;
  border: none;
  background-color: #fff;
  font-size: 0.875rem;
  text-align: left;
  padding: 4;
}

